--- a/src/pages/_HeroSection.astro
+++ b/src/pages/_HeroSection.astro
@@ -35,11 +35,11 @@ import HeroImage from "./_HeroImage.astro";
       <div class="mt-6 flex items-center justify-center gap-4">
         <Button href="/members">
           Our Members
-          <ArrowRight class="h-4 w-4" />
+          <ArrowRight class="h-4 w-4 hidden sm:inline-block" />
         </Button>
         <Button color="white" href="/projects">
           Our Projects
-          <ArrowRight class="h-4 w-4" />
+          <ArrowRight class="h-4 w-4 hidden sm:inline-block" />
         </Button>
       </div>
     </div>
