--- a/src/pages/_HeroImage.astro
+++ b/src/pages/_HeroImage.astro
@@ -24,40 +24,42 @@ import Hero from "../assets/hero.jpg";
   </div>
 </div>
 <script>
-  const el = document.querySelector("[data-rotated]")! as HTMLElement;
-  let windowWidth = window.innerWidth;
-  let windowHeight = window.innerHeight;
+  document.addEventListener("astro:page-load", () => {
+    const el = document.querySelector("[data-rotated]")! as HTMLElement;
+    let windowWidth = window.innerWidth;
+    let windowHeight = window.innerHeight;
 
-  window.addEventListener("resize", () => {
-    windowWidth = window.innerWidth;
-    windowHeight = window.innerHeight;
+    window.addEventListener("resize", () => {
+      windowWidth = window.innerWidth;
+      windowHeight = window.innerHeight;
+    });
+
+    let currentMouse = { x: 0, y: 0 };
+    let targetMouse = { x: 0, y: 0 };
+
+    window.addEventListener("pointermove", (e) => {
+      targetMouse.x = e.clientX;
+      targetMouse.y = e.clientY;
+    });
+
+    let rotationX = 0;
+    let rotationY = 0;
+
+    const animate = () => {
+      currentMouse.x += (targetMouse.x - currentMouse.x) * 0.03;
+      currentMouse.y += (targetMouse.y - currentMouse.y) * 0.03;
+
+      const targetX = (currentMouse.y - windowHeight / 2) / 30;
+      const targetY = -(currentMouse.x - windowWidth / 2) / 30;
+
+      rotationX += (targetX - rotationX) * 0.1;
+      rotationY += (targetY - rotationY) * 0.1;
+
+      el.style.transform = `rotateX(${rotationX}deg) rotateY(${rotationY}deg)`;
+
+      requestAnimationFrame(animate);
+    };
+
+    animate();
   });
-
-  let currentMouse = { x: 0, y: 0 };
-  let targetMouse = { x: 0, y: 0 };
-
-  window.addEventListener("pointermove", (e) => {
-    targetMouse.x = e.clientX;
-    targetMouse.y = e.clientY;
-  });
-
-  let rotationX = 0;
-  let rotationY = 0;
-
-  const animate = () => {
-    currentMouse.x += (targetMouse.x - currentMouse.x) * 0.03;
-    currentMouse.y += (targetMouse.y - currentMouse.y) * 0.03;
-
-    const targetX = (currentMouse.y - windowHeight / 2) / 30;
-    const targetY = -(currentMouse.x - windowWidth / 2) / 30;
-
-    rotationX += (targetX - rotationX) * 0.1;
-    rotationY += (targetY - rotationY) * 0.1;
-
-    el.style.transform = `rotateX(${rotationX}deg) rotateY(${rotationY}deg)`;
-
-    requestAnimationFrame(animate);
-  };
-
-  animate();
 </script>
