Try improve performance

--- a/src/layouts/GlowBackground.astro
+++ b/src/layouts/GlowBackground.astro
@@ -6,7 +6,7 @@
 >
   <div
     data-pointer-glow
-    class="absolute bg-radial pointer-events-none -translate-1/2 from-secondary/50 to-transparent h-[80vh] rounded-full blur-3xl aspect-square"
+    class="absolute bg-radial pointer-events-none -translate-1/2 from-secondary/50 to-secondary/0 to-50% md:blur-sm h-[150vh] rounded-full aspect-square"
   >
   </div>
 </div>
