--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -57,6 +57,8 @@ const fullTitle = title ? title + " - Terpal B24" : "Terpal B24";
     ScrollSmoother.create({
       smooth: 1.2,
       effects: true,
+      normalizeScroll: true,
+      smoothTouch: false,
     });
   });
 </script>
