Change scroll smoother touch screen

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -58,7 +58,7 @@ const fullTitle = title ? title + " - Terpal B24" : "Terpal B24";
       smooth: 1.2,
       effects: true,
       normalizeScroll: true,
-      smoothTouch: false,
+      smoothTouch: 0.1,
     });
   });
 </script>
