--- a/src/pages/_AboutSection.astro
+++ b/src/pages/_AboutSection.astro
@@ -6,7 +6,7 @@
             Who We Are?
         </h2>
         <p
-            class="about-desc flex-1 text-center md:text-left text-2xl leading-normal font-semibold"
+            class="about-desc flex-1 text-center md:text-left md:leading-normal text-xl md:text-2xl leading-normal font-semibold"
         >
             Terpal B 24 is a{" "}
             <span class="text-primary">software engineering class</span> at{" "}
