--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -1,4 +1,4 @@
-<footer class="py-24">
+<footer transition:persist transition:name="footer-section" class="py-24">
   <div class="container flex flex-col items-center justify-center gap-4">
     <p class="text-center font-semibold">
       &copy; {new Date().getFullYear()} Terpal B 24. All rights reserved.
