--- a/src/pages/_HeroSection.astro
+++ b/src/pages/_HeroSection.astro
@@ -59,6 +59,7 @@ import HeroImage from "./_HeroImage.astro";
           autoAlpha: 0,
           stagger: 0.05,
           delay: 0.5,
+          onComplete: () => splitText.revert(),
         });
       },
     });
