--- a/src/pages/albums/index.astro
+++ b/src/pages/albums/index.astro
@@ -46,8 +46,8 @@ const uniqueYears = [...new Set(years)];
               alt={`Foto ${data.title}`}
               class="aspect-video"
             />
-            <div class="pt-6 space-y-2">
-              <h3 class="text-4xl font-black">{data.title}</h3>
+            <div class="pt-6 space-y-4">
+              <h3 class="text-4xl leading-normal font-black">{data.title}</h3>
               <div
                 class={`flex items-center font-bold uppercase text-sm mt-2 gap-2 flex-wrap ${idx % 2 === 0 ? "text-primary" : "text-secondary"}`}
               >
