Add overflow in some container

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,7 +10,10 @@
 @layer base {
   :root {
     color-scheme: dark;
-    @apply bg-bg text-white;
+  }
+
+  body {
+    @apply bg-bg text-white font-sans;
   }
 
   .ripple {
